# mully

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: mint.json
docs/components/: datasets.mdx  features.mdx  guidelines.mdx  violations.mdx
docs/concepts/: evaluation.mdx  featurization.mdx  generation.mdx
docs/get_started/: installation.mdx  introduction.mdx  quickstart.mdx
src/mully/core/: enums.py  models.py  types.py
